--- a/index.html
+++ b/index.html
@@ -202,6 +202,17 @@
                      </p>
                      <br></br>
             </article>
+
+            <article>
+               <h1 id="About_The_Author" class="City_Headers">About the Author</h1>
+                  <p id="About_The_Author_Par" class="City_Paragraphs">
+                     Hello, welcome to the about me section of the website. Where do I start? My name is Erin Madison, but for some reason my parents decided 
+                     that they would call me Maddie..it's a weird thing my family does. I was born in 1997 in St.Louis, Missouri. I grew up all over the state; 
+                     from Rolla, to Arnold, to South City, I've lived all over the show me state. Currently I live with my parents and we travel most of the year
+                     in a cargo van and travel trailer. I pride myself on the number of states and places I have visited and even lived. After going to 27 states 
+                     I've ended up in Michigan with hopes of moving to San Francisco in the next few months. A few hobbies of mine: the piano, tattooing, and 
+                     creating customized shoes for people. My life has been interesting so far, and I look forward to my travels to come!
+            </article>
                <footer>
                   <p id="footer">&copy 2022 Erin Scudder</p>
                </footer>
