--- a/index.html
+++ b/index.html
@@ -212,6 +212,10 @@
                      in a cargo van and travel trailer. I pride myself on the number of states and places I have visited and even lived. After going to 27 states 
                      I've ended up in Michigan with hopes of moving to San Francisco in the next few months. A few hobbies of mine: the piano, tattooing, and 
                      creating customized shoes for people. My life has been interesting so far, and I look forward to my travels to come!
+                  </p>
+                     <p class="photos">
+                        <img class="photos" src="images/about-me.jpg" alt="The author: Maddie Scudder">
+                     </p>
             </article>
                <footer>
                   <p id="footer">&copy 2022 Erin Scudder</p>
