added a section to check with autograde

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
          <main>
 
             <article>
+               <section>
                <br></br>
                <h1 id="San_Fran_Head" class="City_Headers">San Francisco, CA</h1>
                   <p id="San_Fran_Par" class="City_Paragraphs">
@@ -67,6 +68,7 @@
                         <img class="photos" src="images/sanFran.jpeg" alt="Golden Gate Bridge, CA">
                      </p>
                      <br></br>
+               </section>
             </article> 
                
             <article>
