added copyright to footer

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                      </p>
             </article>
                <footer>
-                  <p id="footer">&copy 2022 Erin Scudder</p>
+                  <p id="footer">&copy; 2022 Erin Scudder</p>
                </footer>
 
          </main>         
